--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -52,9 +52,9 @@ button {
 }
 
 .login-btn {
-    background-color: #28a745;
+    background-color: #f44336;
 }
 
 .login-btn:hover {
-    background-color: #218838;
+    background-color: #d32f2f;
 }
