--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -67,12 +67,12 @@ h2 {
 }
 
 .btn.primary {
-    background-color: #007BFF;
+    background-color: #f44336;
     color: white;
 }
 
 .btn.primary:hover {
-    background-color: #0056b3;
+    background-color: #d32f2f;
 }
 
 .additional-options {
