Refactor: 이전 페이지 또는 메인 페이지로 이동하는 단순 기능 추가 위한 front 단 수정

--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -13,6 +13,13 @@ body {
     height: 50%;
 }
 
+.additional-options {
+    display: flex;
+    font-size: 15px;
+    color: gray;
+    text-decoration: none;
+}
+
 .login-container {
     margin-top: 50px;
     background-color: white;
